--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,33 +10,16 @@
 <body>
 <div class="container">
     <div th:fragment="header">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/plats}">Plats</a></li>
-                        <li><a href="#" th:href="@{/plat/new}">Create new plat</a></li>
-                        <li><a href="#" th:href="@{/reservations}"> Reservations</a></li>
-                        <li><a href="#" th:href="@{/reservation/new}">Create new reservation</a></li>
-                    </ul>
-
+        <div>
+            <div><h1>Le Bistrot</h1></a></div>
+            <div class="my-divs">
+                <div class="my-div"><a href="#" th:href="@{/home}">Home</a></div>
+                    <div class="my-div"><a href="#" th:href="@{/plats}">Plats</a></div>
+                    <div  class="my-div"><a href="#" th:href="@{/plat/new}">Create new plat</a></div>
+                    <div  class="my-div"><a href="#" th:href="@{/reservations}"> Reservations</a></div>
+                    <div  class="my-div"><a href="#" th:href="@{/reservation/new}">Create new reservation</a></div>
                 </div>
-            </div>
-        </nav>
-
-        <div class="jumbotron">
-            <div class="row text-center">
-                <div class="">
-                    <h2>Le Bistrot</h2>
-                    <h3>Welcome</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <img src="../../static/images/boot.png" width="200" th:src="@{/images/boot.png}"/>
-            </div>
         </div>
-
     </div>
 </div>
 </body>
