--- a/src/main/resources/templates/plats.html
+++ b/src/main/resources/templates/plats.html
@@ -4,10 +4,12 @@
     <title>Le Bistrot</title>
     <style>
         /* Styles CSS */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-        }
+          body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
 
         .container {
             max-width: 800px;
@@ -45,21 +47,36 @@
 
         a {
             text-decoration: none;
-            color: #333;
+
         }
 
-        a:hover {
-            color: #ff0000;
-        }
 
         img {
             width: 100%;
             max-height: 400px;
             margin-top: 20px;
         }
+        .my-divs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.my-div {
+  text-align: center;
+  margin: 20px;
+}
+header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
     </style>
 </head>
 <body>
+<header>
+<li th:replace="fragments/header :: header"></li>
+</header>
 <div class="container">
     <div th:if="${not #lists.isEmpty(plats)}">
         <h2>Plat List</h2>
