--- a/src/main/resources/templates/platshow.html
+++ b/src/main/resources/templates/platshow.html
@@ -40,9 +40,27 @@
             background-color: #f2f2f2;
             color: #333;
         }
+          .my-divs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.my-div {
+  text-align: center;
+  margin: 20px;
+}
+header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
     </style>
 </head>
 <body>
+<header>
+    <li th:replace="fragments/header :: header"></li>
+</header>
 <div class="container">
     <h2>Plat Details</h2>
     <div>
