--- a/src/main/resources/templates/reservationshow.html
+++ b/src/main/resources/templates/reservationshow.html
@@ -2,11 +2,70 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
   <title>Le Bistrot</title>
-  <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
+  <style>
+      .my-divs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.my-div {
+  text-align: center;
+  margin: 20px;
+}
+header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #333;
+            margin-top: 0;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .control-label {
+            font-weight: bold;
+        }
+
+        .form-control-static {
+            margin-top: 7px;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            border: none;
+            background-color: #f2f2f2;
+            color: #333;
+        }
+          .my-divs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+  </style>
 </head>
 <body>
+<header>
+  <li th:replace="fragments/header :: header"></li>
+</header>
 <div class="container">
-  <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
   <h2>Reservation Details</h2>
   <div>
     <form class="form-horizontal">
